--- a/static/css/partial/layout/_main.sass
+++ b/static/css/partial/layout/_main.sass
@@ -18,6 +18,7 @@
         border-radius: 15px
         background: var(--background-color--emphasis-tag)
         font-size: .9em
+        color: var(--font-color--default)
 
         &:before
           content: attr(data-count)
@@ -27,4 +28,3 @@
           font-size: .8em
           font-weight: bold
           color: var(--font-color--emphasis-tag-count)
-
