--- a/static/css/partial/component/_common.sass
+++ b/static/css/partial/component/_common.sass
@@ -61,6 +61,6 @@
   .tag
     float: left
     font-size: .88em
-    color: var(--font-color--post-tag) !important
+    color: var(--font-color--post-tag)
     text-decoration: none!important
     padding-inline-end: .8em
