--- a/static/css/partial/layout/_post-detail.sass
+++ b/static/css/partial/layout/_post-detail.sass
@@ -58,6 +58,10 @@
     text-align: left
     color: var(--font-color--post-content)
 
+  .tag-container
+    .tag
+      color: var(--font-color--post-tag)
+
 
   .footnote
     font-size: .8em
