--- a/static/css/partial/variable/_blue-theme.sass
+++ b/static/css/partial/variable/_blue-theme.sass
@@ -1,38 +1,19 @@
 body.blue.theme
-  //--font-family--default: 'InfinitySans'
-  //  --font-family--icon: 'Font Awesome 5 Free'
-  //
-  //  --background-color--default: #fefeff
-  //  --background-color--nav: #759cd8
-  //  --background-color--post-container: #fff
-  //  --background-color--file: #1f1f1f
-  //  --background-color--blockquote: #fcfcfc
-  //  --background-color--stepper-title: #6a7990
-  //  --background-color--emphasis-tag: #e6f4f1a3
-  //
-  //  --font-color--default: #4e5665
-  //  --font-color--nav-title: #fff
-  //  --font-color--nav-category: #fffffff7
-  //  --font-color--nav-link: #fffaf5bd
-  //  --font-color--section-title: #343840
-  //  --font-color--post-content: #3F4756
-  //  --font-color--emphasis-tag-count: #0094FA
-  //
-  //  --font-color--post-date: #8f99b1
-  //  --font-color--post-tag: #7f848e
-  //  --font-color--post-category-badge: #fff
-  //  --font-color--post-step-title: #fff
-  //  --font-color--post-info: #8d98b1
-  //  --font-color--post-warning: #b79735
-  //  --font-color--post-count: #5889d4
-  //
-  //  --border-color--thumbnail: #eee
-  //  --border-color--post-container: #f5f5f5
-  //
-  //  --padding--contents-wrapper-x: 3em
-  //  --padding--contents-wrapper-y: 2em
-  //
-  //  --key-color--default: #887456
-  //
-  //  --color-brown: #574141
-  //  --color-green: #A4AF61
+    --background-color--default: #fefeff
+    --background-color--nav: #759cd8
+    --background-color--blockquote: #fcfcfc
+    --background-color--stepper-title: #6a7990
+    --background-color--emphasis-tag: #e6f4f1a3
+
+    --font-color--default: #4e5665
+    --font-color--section-title: #343840
+    --font-color--post-content: #3F4756
+    --font-color--emphasis-tag-count: #0094FA
+
+    --font-color--post-date: #8f99b1
+    --font-color--post-tag: #7f848e
+    --font-color--post-info: #8d98b1
+    --font-color--post-warning: #b79735
+    --font-color--post-count: #5889d4
+
+    --key-color--default: #887456
