--- a/static/css/partial/component/_common.sass
+++ b/static/css/partial/component/_common.sass
@@ -1,7 +1,7 @@
 .btn-search
   cursor: pointer
   font-style: normal
-  font-family: var(--font-family--icon)
+  font-family: var(--font-family--icon-free)
   font-weight: 900
 
   &:before
