--- a/static/css/partial/component/_navigation-bar.sass
+++ b/static/css/partial/component/_navigation-bar.sass
@@ -34,14 +34,14 @@
             font-style: normal
 
             &.email
-                font-family: var(--font-family--icon)
+                font-family: var(--font-family--icon-free)
                 font-weight: 900
 
                 &:before
                     content: '\f658'
 
             &.github
-                font-family: var(--font-family--icon-b)
+                font-family: var(--font-family--icon-brand)
 
                 &:before
                     content: '\f09b'
