--- a/static/css/partial/component/_post-list.sass
+++ b/static/css/partial/component/_post-list.sass
@@ -45,7 +45,7 @@
           content: '\f017'
           font-weight: 100
           opacity: .5
-          font-family: var(--font-family--icon)
+          font-family: var(--font-family--icon-free)
 
 
 @media screen and (max-width: 768px)
