--- a/static/css/partial/layout/_post-detail.sass
+++ b/static/css/partial/layout/_post-detail.sass
@@ -86,7 +86,7 @@
 
     .rating
       font-style: normal
-      font-family: var(--font-family--icon)
+      font-family: var(--font-family--icon-free)
       color: #f3e3a5
 
       &.full
@@ -122,7 +122,7 @@
       margin-bottom: -1px
 
       &:before
-        font-family: var(--font-family--icon)
+        font-family: var(--font-family--icon-free)
         content: '\f15b'
         margin-right: .5em
 
@@ -172,7 +172,7 @@
 
       &:before
         content: '\f078'
-        font-family: var(--font-family--icon)
+        font-family: var(--font-family--icon-free)
         font-weight: 900
         position: absolute
         left: 0
@@ -188,7 +188,7 @@
 
     &:before
       font-size: 1.3em
-      font-family: var(--font-family--icon)
+      font-family: var(--font-family--icon-free)
       content: '\f071'
       margin-right: .5em
       font-weight: 900
@@ -202,7 +202,7 @@
 
     &:before
       font-size: 1.3em
-      font-family: var(--font-family--icon)
+      font-family: var(--font-family--icon-free)
       content: '\f05a'
       margin-right: .5em
       font-weight: 900
@@ -360,7 +360,7 @@
     &:before
       content: '\f144'
       font-weight: 900
-      font-family: var(--font-family--icon)
+      font-family: var(--font-family--icon-free)
 
 
   .translation-article-wrapper
