--- a/static/css/partial/layout/_search.sass
+++ b/static/css/partial/layout/_search.sass
@@ -43,7 +43,7 @@
       margin: 5em 0
 
       &:before
-        font-family: var(--font-family--icon)
+        font-family: var(--font-family--icon-free)
         content: '\f4ad'
         font-weight: 400
         font-size: 3em
