--- a/static/css/partial/variable/_default-theme.sass
+++ b/static/css/partial/variable/_default-theme.sass
@@ -6,18 +6,18 @@ body
   --background-color--default: #fdfdfd
   --background-color--nav: #2A272A
   --background-color--post-container: #fff
-  --background-color--file: #1f1f1f
+  --background-color--code-block: #1f1f1f
   --background-color--blockquote: #fcfcfc
   --background-color--stepper-title: #4B4A54
-  --background-color--emphasis-tag: #e0e2eca8
+  --background-color--main-tag: #e0e2eca8
 
   --font-color--default: #000
-  --font-color--nav-title: #fff
+  --font-color--nav-default: #fff
   --font-color--nav-category: #fffffff7
-  --font-color--nav-link: #fffaf5bd
+  --font-color--nav-account: #fffaf5bd
   --font-color--section-title: #3a4048
   --font-color--post-content: #4B4A54
-  --font-color--emphasis-tag-count: #ad3ab5
+  --font-color--main-tag-count: #ad3ab5
 
   --font-color--post-date: #8e8e8e
   --font-color--post-tag: #8593a2
