--- a/static/css/partial/component/_navigation-bar.sass
+++ b/static/css/partial/component/_navigation-bar.sass
@@ -30,7 +30,7 @@
 
         .account
             margin: 0 .5em
-            color: var(--font-color--nav-link)
+            color: var(--font-color--nav-account)
             font-style: normal
 
             &.email
@@ -48,14 +48,14 @@
 
 
     .title
-        color: var(--font-color--nav-title)
+        color: var(--font-color--nav-default)
         font-size: 2em
 
     .btn-search
         position: absolute
         top: 0
         right: 0
-        color: var(--font-color--nav-link)
+        color: var(--font-color--nav-account)
         font-size: 1.4em
         padding: .5em 1em
 
@@ -125,5 +125,5 @@
                 background: transparent
                 border: none
                 font-size: 1.4em
-                color: var(--font-color--nav-title)
+                color: var(--font-color--nav-default)
                 opacity: .8
