--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -18,7 +18,7 @@
                                 >
                             </a>
 
-                            <div class="additional-info-wrapper mb-1 clear-fix">
+                            <div class="additional-info-wrapper clear-fix">
                                 {% include category-link.html categories=post.categories class="category-text" %}
 
                                 <i class="divider"></i>
