--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -5,7 +5,7 @@ body
   height: 100vh
   margin: 0
 
-  h1, h2, h3, h4, h5, a, p
+  h1, h2, h3, h4, h5, a
     padding: 0
     margin: 0
 
@@ -93,6 +93,12 @@ body
 
   .mr-1
     margin-right: 1em!important
+
+  .ml-half
+    margin-left: .5em!important
+
+  .ml-1
+    margin-left: 1em!important
 
   .ml-2
     margin-left: 2em!important
