--- a/static/css/partial/layout/_post-detail.sass
+++ b/static/css/partial/layout/_post-detail.sass
@@ -14,9 +14,6 @@
     padding-right: 18%
     font-size: .95em
 
-    h1, h2, h3, h4, h5
-      margin-block-start: 2em
-
     h1
       font-size: 1.6em
 
@@ -57,6 +54,9 @@
   .post-contents
     text-align: left
     color: var(--font-color--post-content)
+
+    h1, h2, h3, h4, h5
+      margin-block: 2em
 
   .tag-container
     .tag
@@ -133,13 +133,13 @@
     &:after
       content: 'empty'
       color: transparent
-      margin-bottom: 2em
+      margin-bottom: 2.5em
 
   blockquote
     margin: 0
     background: var(--background-color--blockquote)
     border: 1px solid #fefefe
-    padding: 2em 1.5em
+    padding: 1em 1.5em
     font-size: .9em
     border-left: 4px solid var(--key-color--default)
     overflow: auto
@@ -216,9 +216,9 @@
       position: relative
 
       .highlight
+        padding-top: .8em
         overflow: auto
         margin: 0
-        margin-top: 1.2em
 
       &:before
         line-height: 2em
@@ -359,6 +359,7 @@
 
     &:before
       content: '\f144'
+      margin-right: .5em
       font-weight: 900
       font-family: var(--font-family--icon-free)
 
@@ -373,12 +374,10 @@
       line-height: 1.5em
       font-size: 1em
       font-weight: normal
-      margin-block-start: 2em
 
     h2
       line-height: 1.5em
       font-size: .9em
-      margin-block-start: 0
       font-weight: normal
       opacity: .6
 
