search library update

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -15,7 +15,7 @@
     </body>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mindcloud92/dddd.static-search@main/src/static/js/dddd.static-search.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/mindcloud92/dddd.static-search@624e63ddeffb4b59bb34f84fae0190f3b3655495/src/static/js/dddd.static-search.min.js"></script>
     <script type="text/javascript">
         window.onload = () => {
             dddd.static.Search.renderResult({
