update style & remove post

--- a/static/css/partial/layout/_search.sass
+++ b/static/css/partial/layout/_search.sass
@@ -47,6 +47,7 @@
         content: '\f4ad'
         font-weight: 400
         font-size: 3em
+        margin-bottom: .2em
 
     .post-container
       li
