--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <body class="theme:{{ site.theme.color }}">
-        {% include header.html %}
-
         <main>
             {{ page.content }}
-        </main>
 
-        {% include footer.html %}
+            <button>Go To Main</button>
+        </main>
     </body>
 </html>
