--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -1,2 +1,12 @@
 ---
 ---
+
+@import 'variable/font';
+
+@import 'component/icon';
+@import 'component/section';
+@import 'component/card';
+@import 'component/button';
+
+
+@import 'base';
