--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -3,10 +3,10 @@
 
 @import 'variable/font';
 
-@import 'component/icon';
 @import 'component/section';
 @import 'component/card';
 @import 'component/button';
 
-
 @import 'base';
+
+@import 'layout/main';
