--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,7 +1,6 @@
 
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 480 480" xml:space="preserve" class="logo">
+<svg class="logo" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 480 480" xml:space="preserve">
     <g>
         <g>
             <path d="M470.68,322.771c-5.904-4.984-13.704-7.072-21.304-5.752L296,343.699v-54.752c11.824-0.72,33.592-4.136,48.608-19.144
