--- a/static/css/partial/base.sass
+++ b/static/css/partial/base.sass
@@ -15,9 +15,14 @@ main
 .mb-1
   margin-bottom: 1em
 
+.mb-2
+  margin-bottom: 2em
+
 .mt-1
   margin-top: 1em
 
 .mt-5
   margin-top: 5em
 
+.mt-8
+  margin-top: 8em
