--- a/static/css/partial/base.sass
+++ b/static/css/partial/base.sass
@@ -1,6 +1,5 @@
 body
   margin: 0
-  font-size: 1.125rem
   font-family: $font-family--default
 
 img
@@ -18,11 +17,14 @@ main
 .mb-2
   margin-bottom: 2em
 
+.mb-3
+  margin-bottom: 3em
+
 .mt-1
   margin-top: 1em
 
 .mt-5
   margin-top: 5em
 
-.mt-8
-  margin-top: 8em
+.mt-6
+  margin-top: 6em
