--- a/static/css/partial/component/button.sass
+++ b/static/css/partial/component/button.sass
@@ -1,28 +1,19 @@
 @mixin button()
-  display: inline-block
+  padding: .5em 1em
+  font-size: 0.8rem
   text-decoration: none
-  font-size: .8rem
-  padding: .4em 1em
-  position: relative
+  opacity: .85
 
   &:hover
-    &:after
-      content: ''
-      position: absolute
-      top: 0
-      right: 0
-      left: 0
-      bottom: 0
-      background-color: rgba(0, 0, 0, .02)
+    opacity: 1
 
-@mixin button--outline($color)
-  @include button()
-  border: 1px solid $color
-  color: $color
 
-.btn
+.button
   &-outline
-    @include button--outline(black)
+    @include button()
+    @include border--color($color--white)
+    @include text--color($color--white)
+    @include background--color($color--white, 0.3)
 
-    &\:yellow
-      @include button--outline(#DCA11D)
+  &-fill
+    @include button()
