--- a/static/css/partial/color.sass
+++ b/static/css/partial/color.sass
@@ -1,11 +1,9 @@
 @use "sass:map"
 
-$color--indigo: #01213c
 $color--white: #fff
+$color--black: #000
+$color--indigo: #01213c
 $color--mustard: #DCA11D
-
-$colors: ('indigo': $color--indigo, 'white': $color--white, 'mustard': $color--mustard)
-
 
 @mixin border--color ($color, $width: 1, $style: solid)
   border: #{$width}px #{$style} #{$color}
@@ -17,7 +15,8 @@ $colors: ('indigo': $color--indigo, 'white': $color--white, 'mustard': $color--m
   background: rgba($color, $opacity)
 
 
-@each $key, $color in $colors
+$-colors: ('indigo': $color--indigo, 'white': $color--white, 'mustard': $color--mustard, 'black': $color--black)
+@each $key, $color in $-colors
   .background-#{$key}
     @include background--color($color)
 
