--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -20,7 +20,7 @@
                     {% for category in site.categories reversed %}
                         <a href="/{{ category.first }}" class="button-outline border-rounded-4 mx-1 mb-2 d-inline-block">
                             {{ category.first | upcase }}
-                            <i class="fas fa-long-arrow-alt-right ml-4"></i>
+                            <i class="fas fa-angle-right ml-4"></i>
                         </a>
                     {% endfor %}
                 </div>
