--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@
     {% include head.html %}
 
     <body class="page-main" >
-        <main>
+        <main class="main">
             <h1 class="title">
                 {{ site.title }}
                 {% include component/logo.html %}
