--- a/static/css/partial/base/color.sass
+++ b/static/css/partial/base/color.sass
@@ -1,4 +1,4 @@
-$_colors: ('white': #fff, 'black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'indigo': #364D6C)
+$_colors: ('white': #fff, 'black': #000, 'primary': #01213c, 'secondary': #DCA11D, 'accent': #364D6C)
 
 @function getColor($name, $opacity: 1)
   $value: map-get($_colors, $name)
@@ -18,6 +18,10 @@ $_colors: ('white': #fff, 'black': #000, 'primary': #01213c, 'secondary': #DCA11
   border-color: getColor($color-name, $opacity)
 
 @mixin color-dynamic($property-names...)
+  @content
+  @each $property-name in $property-names
+    #{$property-name}: getColor('primary')
+
   @each $key, $value in $_colors
     &\:#{$key}
       @content
