--- a/static/css/partial/component/input.sass
+++ b/static/css/partial/component/input.sass
@@ -12,7 +12,7 @@
     @extend %input
 
     @at-root &-wrapper
-      $-color: 'indigo'
+      $-color: 'accent'
 
       border:
         width: 2px
