--- a/static/css/partial/layout/page.sass
+++ b/static/css/partial/layout/page.sass
@@ -8,13 +8,12 @@
   align-items: $v-align
 
 
-
 %page
   @include font('default')
   margin: 0
 
-  main
+  .main
     padding: 0 20%
 
     @media screen and (max-width: 768px)
-      padding: 0 5%
+      padding: 0 8%
