--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -5,6 +5,7 @@
 @import 'component/button';
 @import 'component/input';
 @import 'component/logo';
+@import 'component/card';
 
 @import 'layout/header';
 
